--- a/.env
+++ b/.env
@@ -2,12 +2,11 @@ APP_ENV=dev
 APP_DEBUG=1
 APP_SECRET=f320299cf83544d18563ec968efa7d52
 
-DATABASE_URL=postgresql://symfony:symfony@postgres:5432/symfony?serverVersion=15&charset=utf8
-
-MONGODB_URL=mongodb://mongodb:27017
-MONGODB_DB=symfony
+DATABASE_URL=mysql://symfony:symfony@db:3306/symfony?serverVersion=15&charset=utf8
 
 TRUSTED_PROXIES=127.0.0.1,remote_addr
 TRUSTED_HOSTS=^localhost|example\.com$
 
 APP_NAME=crm-maison
+
+MESSENGER_TRANSPORT_DSN=doctrine://default
